# MetalFront

./: CMakeLists.txt  README.md
include/: Entity.h  EntityManager.h  Vec2.h  test.h
src/: EntityManager.cpp  main.cpp
